--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
 - name: Install nginx
-  apt: allow_unauthenticated=yes name={{ item }} state=present
-  with_items:
-          - nginx
-          - php-fpm
+  apt: allow_unauthenticated=yes name=nginx state=present
 
 - name: Remove default config
   file: path=/etc/nginx/sites-enabled/default state=absent
