--- a/roles/ssl/tasks/main.yml
+++ b/roles/ssl/tasks/main.yml
@@ -8,7 +8,7 @@
   register: stat_result
 
 - name: Install base conf for ssl
-  template: src=base-syberiayoubear.devops.srwx.net.conf.j2 dest=/etc/nginx/sites-enabled/syberiayoubear.devops.srwx.net.conf owner=root group=root mode=0644
+  template: src=base-syberiayoubear.devops.srwx.net.conf.j2 dest=/etc/nginx/sites-enabled/{{ domain_name }}.conf owner=root group=root mode=0644
   when: stat_result.stat.exists == False
   register: checkpoint
 
@@ -30,5 +30,5 @@
     job: "letsencrypt renew && service nginx reload"
 
 - name: update actual site.conf
-  template: src=prod-syberiayoubear.devops.srwx.net.j2 dest=/etc/nginx/sites-enabled/syberiayoubear.devops.srwx.net.conf owner=root group=root mode=0644
+  template: src=prod-syberiayoubear.devops.srwx.net.j2 dest=/etc/nginx/sites-enabled/{{ domain_name }}.conf owner=root group=root mode=0644
   notify: restart nginx
